<resources>
    <string name="app_name">Win Tracker</string>
    <string name="app_title">Welcome to the Win Tracker App</string>
    <string name="new_player_button">New Player</string>
    <string name="add_player_button">Add Player</string>
    <string name="player_name_hint">Name</string>
    <string name="author_label">Developed by David Nuzzo</string>
    <string name="position_column_header">Pos</string>
    <string name="name_column_header">Name</string>
    <string name="wins_column_header">Wins</string>
    <string name="add_win_button_text">+</string>
    <string name="version_label">Version 1.2</string>
</resources>